@@ -4,6 +4,11 @@ TODO
 Important
 ---------
 
+* User preferences page. Required for:
+
+  - Allowing users to change their passwords (important!).
+  - Setting a default notification address.
+
 * Multiple-file support vs grant re-use (allow more than one grant, grant
   timeout).
 
@@ -26,24 +31,12 @@ Important
 * Move alien tickets/grants from the administrator's lists to a separated page.
   My take: definitely important, high priority.
 
-* Do something about passwords through e-mail (either always send the password,
-  or never). Important. See:
-
-  http://thread.gmane.org/gmane.comp.web.dl-ticket-service.general/95
-
-  And [private] discussions with Mokrani, Emanuele.
-
-  This will require storing the password of grants in the DB.
-
 * Store the current language when creating a ticket/grant, so that notification
   emails are sent with the same locale. Important/easy. See [private]
   discussion with Mokrani.
 
 * Use file templates instead of hard-coded messages to compose the e-mails.
   See a lot of good suggestions sent by Morkani.
-
-* Move config.php to (or at least reading from) /etc/ on unix platform,
-  to simplify update process.
 
 * Hash-based file references, required to implement de-duplication,
   multiple tickets, e-mail tracking. See:
@@ -74,6 +67,9 @@ Nice to have
 * Enforce sitewide ticket/grants limits.
 
 * Some sort of quota mechanism to avoid uncontrolled server fill-up.
+
+* Switch from md5 for password hashing to some salted hash (using crypt()).
+  Low priority, since passwords are actually sent in clear-text all over the place.
 
 
 Suggestions
