@@ -1,0 +1,5 @@
+<?php
+// setup the runtime
+set_include_path("." . PATH_SEPARATOR . dirname(realpath(__FILE__)));
+if(get_magic_quotes_runtime()) set_magic_quotes_runtime(0);
+?>
