@@ -1,11 +1,10 @@
 #!/usr/bin/env php
 <?php
-if(get_magic_quotes_runtime())
-  set_magic_quotes_runtime(0);
 if(!isset($argc)) die("not running from the command line\n");
 
 // data
-require_once("../lang.php");
+require_once("../prelude.php");
+require_once("lang.php");
 
 // cycle through configured languages and regenerate them
 foreach($langData as $lang => $dir)
