@@ -1,3 +1,11 @@
+dl 0.10: 
+-------------------
+
+* The default configuration file has been renamed to "config.php.dist" and must
+  be manually copied/renamed to be used. If a suitable "config.php" is not
+  found in the include/ directory, it is read from "/etc/dl.php".
+
+
 dl 0.9: 06/04/2011
 ------------------
 
